[tool.poetry]
name = "pylinearalg"
version = "0.2.0"
description = ""
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
